Thymleaf configuration Add class diagram Edited README

--- a/src/main/webapp/WEB-INF/views/add.html
+++ b/src/main/webapp/WEB-INF/views/add.html
@@ -1,13 +1,11 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<title>Home</title>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"/>	
 </head>
 <body>
 <div class="container">
@@ -29,7 +27,7 @@
               <!-- Doczytac co oznacza # -->	
               <li class="active"><a href="/dzejk">Strona glowna</a></li>
               <li><a href="list">Lista kandydatow</a></li>
-              <li><a href="add">Dodaj kandydata</a></li>
+              <li><a href="#">Contact</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -59,13 +57,26 @@
         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>
+        <form method="POST" action="addSubmit">
+        <div class="form-group">
+		<label for="imie"><p>Imie</p></label>
+		<input type="text" class="form-control" id="imie" name="Name" placeholder="Podaj swoje imie"/>
+		</div>
+        <div class="form-group">
+		<label for="wiek"><p>Wiek</p></label>
+		<input type="number" class="form-control" id="wiek" name="age" placeholder="Podaj swoj wiek"/>
+		</div>
+		<div class="form-group">
+		<label for="dataUrodzenia"><p>Data urodzeia</p></label>
+		<input type="date" class="form-control" id="dataUrodzenia" name="bornDate" placeholder="Podaj swoja date urodzenia"/>
+		</div>
+           <button type="submit" class="btn btn-default">Default</button>
+        </form>
+        
+        
       </div>
 
-    </div> <!-- /container -->	 
-	 Kandydat:
-	${Candidate.getName()}
-	${Candidate.getSlogan()}
-
+    </div> <!-- /container -->
 
 </body>
 </html>
