--- a/src/main/webapp/WEB-INF/views/list.html
+++ b/src/main/webapp/WEB-INF/views/list.html
@@ -1,16 +1,13 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<%@ page session="false" %>
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Home</title>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+<meta http-equiv="Content-Type" content="text/html"/>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 <!-- Optional theme -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">	
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"/>
 </head>
 <body>
 <div class="container">
-
       <!-- Static navbar -->
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -28,7 +25,7 @@
               <!-- Doczytac co oznacza # -->	
               <li class="active"><a href="/dzejk">Strona glowna</a></li>
               <li><a href="list">Lista kandydatow</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="add">Dodaj kandydata</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -56,28 +53,15 @@
         <h1>Navbar example</h1>
         <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs </a>
         </p>
-        <form method="POST" action="addSubmit">
-        <div class="form-group">
-		<label for="imie"><p>Imie</p></label>
-		<input type="text" class="form-control" id="imie" name="Name" placeholder="Podaj swoje imie" >
-		</div>
-        <div class="form-group">
-		<label for="wiek"><p>Wiek</p></label>
-		<input type="number" class="form-control" id="wiek" name="age" placeholder="Podaj swoj wiek" >
-		</div>
-		<div class="form-group">
-		<label for="dataUrodzenia"><p>Data urodzeia</p></label>
-		<input type="date" class="form-control" id="dataUrodzenia" name="bornDate" placeholder="Podaj swoja date urodzenia" >
-		</div>
-           <button type="submit" class="btn btn-default">Default</button>
-        </form>
-        
-        
       </div>
 
-    </div> <!-- /container -->
+    </div> <!-- /container -->	 
+	 Kandydat:
+	${Candidate.getName()}
+	${Candidate.getSlogan()}
+
 
 </body>
 </html>
