--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -1,68 +1,23 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Home</title>
-	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-
-
-<link th:href="@{/resources/css/main.css}" rel="stylesheet" />
-<link th:href="@{/resources/bootstrap/bootstrap-3.3.5-dist/css/bootstrap.min.css}" rel="stylesheet" />
-<!-- Optional theme -->
-
+<title>Home</title>
+<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+<link th:replace="templates/templates::link"></link>
 </head>
 <body>
-<div th:class="container">
-
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default upperCase">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <!-- Doczytac co oznacza # -->	
-              <li class="active"><a href="/dzejk">Strona główna</a></li>
-              <li><a href="list">Lista partii politycznych</a></li>
-             
-
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lista kandydatów na...<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Prezydenta</a></li>
-                  <li><a href="#">Przewodniczącego Partii</a></li>
-                  <li><a href="#">Głosującego</a></li>
-                </ul>
-              </li>
-              <li><a href="list">Nadchodzące wybory</a></li>
-            </ul>
-            
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="./">Zaloguj <span class="sr-only">(current)</span></a></li>
-              <li><a href="../navbar-static-top/">Zarejestruj</a></li>
-              <li><a href="../navbar-fixed-top/">O stronie</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+	<div class="container">
+		<div th:replace="templates/templates::menu"></div>
+		<div class="jumbotron">
         <h1>Navbar example</h1>
         <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs </a>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
         </p>
       </div>
-	<div th:include="templates/templates::links"></div>
-    </div> <!-- /container -->
-    <script th:src="@{/resources/jquery/jquery-1.11.3.min.js}"></script>
-	<script th:src="@{/resources/bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js}"></script>
+	</div>
+
+	<div th:replace="templates/templates::script"></div>
 </body>
 </html>
