Some front-end stuff, Spring security is work correctly

--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -13,7 +13,7 @@
 		<div class="col-xs-6 col-xs-offset-3">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						Basic panel example
+						<ol><li> sadsadsadsaada </li> <li>bbbbbbbbbbbbbbbb</li></ol>
 
 						<form method="post" role="form" th:action="@{/j_spring_security_check}">
 							<div class="form-group">
@@ -22,15 +22,11 @@
 									placeholder="PESEL"/>
 							</div>
 							<div class="form-group">
-								<label for="exampleInputPassword1">Password</label> <input
+								<label for="exampleInputPassword1">Hasło</label> <input
 									type="password" class="form-control" id="exampleInputPassword1" name="password"
 									placeholder="Password"/>
 							</div>
-							<div class="checkbox">
-								<label> <input type="checkbox"/> Check me out
-								</label>
-							</div>
-							<button type="submit" class="btn btn-default">Submit</button>
+							<button type="submit" class="btn btn-default"><i class="fa fa-sign-in"></i> Zaloguj</button>
 						</form>
 
 					</div>
