--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -3,6 +3,12 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Home</title>
+<style>
+ body {
+    font-family: 'PlayfairDisplayRegular', "Georgia", serif !important ;
+
+}
+</style>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 <link th:replace="templates/templates::link"></link>
 </head>
@@ -16,8 +22,10 @@
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
         </p>
       </div>
+      	<div th:replace="templates/templates::footer"></div>
 	</div>
 
 	<div th:replace="templates/templates::script"></div>
+
 </body>
 </html>
