--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,3 +1,17 @@
+body {
+    font-family: 'PlayfairDisplayRegular', "Georgia", serif;
+}
+
 .upperCase {
 	text-transform: capitalize;
 } 
+
+	.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #555 ;
+    background-color: white !important;
+	}
+	
+	.navbar-default {
+	background-color: inherit !important;
+    border-color: white !important;
+	}
