--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -13,7 +13,8 @@
 		<div class="col-xs-6 col-xs-offset-3">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<ol><li> sadsadsadsaada </li> <li>bbbbbbbbbbbbbbbb</li></ol>
+						<ol><li>By się zalogować podaj swój numer PESEL w polu o nazwie PESEL.</li> <li>W polu Hasło wpisz ustanowione przez siebie hasło.
+</li></ol>
 
 						<form method="post" role="form" th:action="@{/j_spring_security_check}">
 							<div class="form-group">
