--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -40,12 +40,11 @@ body {
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul  class="nav navbar-nav">
               <!-- Doczytac co oznacza # -->	
-              <li class="active"><a href="/dzejk">Strona główna</a></li>
+              <li class="active"><a href="/dzejk"><i class="fa fa-home fa-lg"></i> Strona główna</a></li>
               <li><a href="list">Lista partii politycznych</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lista kandydatów na...<span class="caret"></span></a>
@@ -59,14 +58,20 @@ body {
             </ul>
             
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="/dzejk/login">Zaloguj <span class="sr-only">(current)</span></a></li>
-              <li><a href="../navbar-static-top/">Zarejestruj</a></li>
-              <li><a href="../navbar-fixed-top/">O stronie</a></li>
+              <li  th:switch="${#authorization.expression('isAuthenticated()')}" class="active">
+              	<a th:case="false" href="/dzejk/login"><i class="fa fa-sign-in fa-lg"></i> Zaloguj <span class="sr-only">(current)</span></a>
+              	<a th:case="true" th:href="j_spring_security_logout"><i class="fa fa-sign-in fa-lg fa-rotate-180"></i> Wyloguj <span class="sr-only">(current)</span></a>
+              	</li>
+              <li><a href="../navbar-static-top/"><i class="fa fa-user-plus fa-lg"></i> Zarejestruj</a></li>
+              <li><a href="../navbar-fixed-top/"><i class="fa fa-info fa-lg"></i> O stronie</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
-      
+      <span th:text="${#authorization.expression('isAuthenticated()')} ? 
+               'the user is logged in' : 
+               'the user is NOT logged in'">
+</span>
 </div>
 <div th:fragment="footer">
 <div class="row">
