--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -62,7 +62,7 @@ body {
               	<a th:case="false" href="/dzejk/login"><i class="fa fa-sign-in fa-lg"></i> Zaloguj <span class="sr-only">(current)</span></a>
               	<a th:case="true" th:href="j_spring_security_logout"><i class="fa fa-sign-in fa-lg fa-rotate-180"></i> Wyloguj <span class="sr-only">(current)</span></a>
               	</li>
-              <li><a href="../navbar-static-top/"><i class="fa fa-user-plus fa-lg"></i> Zarejestruj</a></li>
+              <li><a href="/dzejk/register"><i class="fa fa-user-plus fa-lg"></i> Zarejestruj</a></li>
               <li><a href="../navbar-fixed-top/"><i class="fa fa-info fa-lg"></i> O stronie</a></li>
             </ul>
           </div><!--/.nav-collapse -->
