--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -26,6 +26,7 @@ body {
 <link th:fragment="link" th:href="@{/resources/css/main.css}" rel="stylesheet" />
 <link th:fragment="link" th:href="@{/resources/bootstrap/bootstrap-3.3.5-dist/css/bootstrap.min.css}" rel="stylesheet" />
 <link th:fragment="link" th:href="@{/resources/font-awesome/font-awesome-4.4.0/css/font-awesome.min.css}" rel="stylesheet" />
+<link th:fragment="link" th:href="@{/resources/other/bootstrapValidator.min.css}" rel="stylesheet" />
 <div th:fragment="menu">
 
 <img th:src="@{/resources/photos/Herb_Polski.svg}" style="height:10em; margin-top: 10px;" alt="..."></img>
@@ -99,5 +100,6 @@ body {
 </div>
     <script th:fragment="script" th:src="@{/resources/jquery/jquery-1.11.3.min.js}"></script>
 	<script th:fragment="script" th:src="@{/resources/bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js}"></script>
+	<script th:fragment="script" th:src="@{/resources/other/bootstrapValidator.min.js}"></script>
 </body>
 </html>
