--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -18,41 +18,43 @@
 		<h2>Utwórz konto: </h2>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-		<form>
+		<form method="POST" th:object="${registerUser}" action="addSubmit">
       <div class="form-group">
     <label for="firstName">Imie</label>
-    <input type="text" class="form-control" id="firstName" placeholder="Podaj swoje imie"/>
+    <input type="text" class="form-control" th:field="${registerUser.firstName}" id="firstName" placeholder="Podaj swoje imie"/>
   </div>
     <div class="form-group">
     <label for="lastName">Nazwisko</label>
-    <input type="text" class="form-control" id="lastName" placeholder="Podaj swoje nazwisko"/>
+    <input type="text" class="form-control" th:field="${registerUser.lastName}" id="lastName" placeholder="Podaj swoje nazwisko"/>
   </div>
     <div class="form-group">
     <label for="PESEL">PESEL</label>
-    <input type="text" class="form-control" id="PESEL" placeholder="Podaj swój PESEL"/>
+    <input type="text" class="form-control"  th:field="${registerUser.PESEL}" id="PESEL" placeholder="Podaj swój PESEL"/>
   </div> 			
   <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Podaj swój email"/>
+    <input type="email" class="form-control" th:field="${registerUser.email}" id="email" placeholder="Podaj swój email"/>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control" id="password1" placeholder="Podaj swoje hasło"/>
+    <input type="password" class="form-control" th:field="${registerUser.password}" id="password1" placeholder="Podaj swoje hasło"/>
   </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
     <label for="date">Data Urodzenia</label>
     <input type="date" class="form-control" id="date" placeholder="Data urodzenia"/>
-  </div>
+  	</div>  -->
     <div class="form-group">
     <label for="region">Województwo</label>
     <select class="form-control">
-
-  <option   th:each="region : ${regions}"  th:text="${region.regionName}" th:value="${region.id}"></option>
+  <option   th:each="region : ${regions}"  th:text="${region.regionName}" th:field="${registerUser.IdD}" th:value="${region.id}"></option>
 </select>
   </div>
     <div class="form-group">
     <label for="exampleInputPassword1">Miasto</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"/>
+    <input type="text" class="form-control" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
+  </div>
+  <div class="form-group">
+  <button type="submit" class="btn btn-default" >Zarejestruj</button>
   </div>
   </form>
   </div>
