--- a/src/main/webapp/WEB-INF/views/add.html
+++ b/src/main/webapp/WEB-INF/views/add.html
@@ -67,7 +67,7 @@
 		<input type="number" class="form-control" id="wiek" name="age" placeholder="Podaj swoj wiek"/>
 		</div>
 		<div class="form-group">
-		<label for="dataUrodzenia"><p>Data urodzeia</p></label>
+		<label for="dataUrodzenia"><p>Data urodzenia</p></label>
 		<input type="date" class="form-control" id="dataUrodzenia" name="bornDate" placeholder="Podaj swoja date urodzenia"/>
 		</div>
            <button type="submit" class="btn btn-default">Default</button>
