--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -53,6 +53,7 @@
     <label for="exampleInputPassword1">Miasto</label>
     <input type="text" class="form-control" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
   </div>
+   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
   <div class="form-group">
   <button type="submit" class="btn btn-default" >Zarejestruj</button>
   </div>
@@ -63,6 +64,24 @@
 	</div>
 
 	<div th:replace="templates/templates::script"></div>
+<script>
 
+
+$( "button" ).on( "click", function(event) {
+	event.preventDefault();
+	$.ajax({
+		type: "POST",
+	    url : "/dzejk/addSubmit",
+	    contentType: 'multipart/form-data',
+        //dataType: 'text',
+	    data: $("form").serialize(),
+	    success : function(data) {
+	        
+	        alert(data);
+	    }
+		
+	});
+	});
+</script>
 </body>
 </html>
