--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -45,7 +45,7 @@
   	</div>  -->
     <div class="form-group">
     <label for="region">Województwo</label>
-    <select class="form-control">
+    <select class="form-control" th:field="${registerUser.IdD}">
   <option   th:each="region : ${regions}"  th:text="${region.regionName}" th:field="${registerUser.IdD}" th:value="${region.id}"></option>
 </select>
   </div>
@@ -53,7 +53,9 @@
     <label for="exampleInputPassword1">Miasto</label>
     <input type="text" class="form-control" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
   </div>
-   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+  <input type="hidden" th:name="${_csrf.parameterName}" id="csrfHeader" th:value="${_csrf.headerName}"/>
+  
+   <input type="hidden" th:name="${_csrf.parameterName}" id="csrfToken" th:value="${_csrf.token}" />
   <div class="form-group">
   <button type="submit" class="btn btn-default" >Zarejestruj</button>
   </div>
@@ -65,16 +67,22 @@
 
 	<div th:replace="templates/templates::script"></div>
 <script>
-
+// alert($("form").serialize());
 
 $( "button" ).on( "click", function(event) {
+	var token = $("#csrfToken").attr("value");
+	var header = $("#csrfHeader").attr("value");
 	event.preventDefault();
 	$.ajax({
 		type: "POST",
-	    url : "/dzejk/addSubmit",
-	    contentType: 'multipart/form-data',
+	    url : "addSubmit",
+	    //contentType: 'application/json',
         //dataType: 'text',
-	    data: $("form").serialize(),
+        	beforeSend: function (xhr) {
+		xhr.setRequestHeader(header, token);
+	},
+	    data:$('form').serialize() ,
+	    
 	    success : function(data) {
 	        
 	        alert(data);
@@ -82,6 +90,23 @@ $( "button" ).on( "click", function(event) {
 		
 	});
 	});
+	
+$.fn.serializeObject = function()
+{
+    var o = {};
+    var a = this.serializeArray();
+    $.each(a, function() {
+        if (o[this.name] !== undefined) {
+            if (!o[this.name].push) {
+                o[this.name] = [o[this.name]];
+            }
+            o[this.name].push(this.value || '');
+        } else {
+            o[this.name] = this.value || '';
+        }
+    });
+    return o;
+};
 </script>
 </body>
 </html>
