--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -15,29 +15,39 @@
 <body>
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
-		<h2>Utwórz konto: </h2>
+		<h2 class="text-center">Utwórz konto: </h2>
+		<div class="text-center displayNone">
+		<i class="fa fa-refresh fa-spin red" style="font-size:5em;"></i>
+		</div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 		<form method="POST" th:object="${registerUser}" action="addSubmit">
       <div class="form-group">
     <label for="firstName">Imie</label>
-    <input type="text" class="form-control" th:field="${registerUser.firstName}" id="firstName" placeholder="Podaj swoje imie"/>
+    <input type="text" class="form-control firstNameErrorInput" th:field="${registerUser.firstName}" id="firstName" placeholder="Podaj swoje imie"/>
+    <td th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name Error</td>
+	<p class="firstNameError" style="display:none;">Podaj swoje imie</p>  
   </div>
     <div class="form-group">
     <label for="lastName">Nazwisko</label>
     <input type="text" class="form-control" th:field="${registerUser.lastName}" id="lastName" placeholder="Podaj swoje nazwisko"/>
+  	<p class="lastNameError" style="display:none;">Podaj swoje nazwisko</p>  
   </div>
     <div class="form-group">
     <label for="PESEL">PESEL</label>
     <input type="text" class="form-control"  th:field="${registerUser.PESEL}" id="PESEL" placeholder="Podaj swój PESEL"/>
+	<p class="PESELError" style="display:none;">Podaj swoj PESEL</p>    
   </div> 			
   <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" class="form-control" th:field="${registerUser.email}" id="email" placeholder="Podaj swój email"/>
+  	<td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</td>
+  	<p class="emailError" style="display:none;">Podaj swoj email</p>  
   </div>
   <div class="form-group">
     <label for="password">Password</label>
     <input type="password" class="form-control" th:field="${registerUser.password}" id="password1" placeholder="Podaj swoje hasło"/>
+  	<p class="passwordError" style="display:none;">Podaj swoje hasło</p>  
   </div>
     <!-- <div class="form-group">
     <label for="date">Data Urodzenia</label>
@@ -48,10 +58,12 @@
     <select class="form-control" th:field="${registerUser.IdD}">
   <option   th:each="region : ${regions}"  th:text="${region.regionName}" th:field="${registerUser.IdD}" th:value="${region.id}"></option>
 </select>
+ 	<p class="firstNameError" style="display:none;">Wybierz wojewodztwo</p>  
   </div>
     <div class="form-group">
     <label for="exampleInputPassword1">Miasto</label>
     <input type="text" class="form-control" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
+  	
   </div>
   <input type="hidden" th:name="${_csrf.parameterName}" id="csrfHeader" th:value="${_csrf.headerName}"/>
   
@@ -66,47 +78,38 @@
 	</div>
 
 	<div th:replace="templates/templates::script"></div>
+	<p class='firstNameError' style='display:none;'>kurwa</p>
 <script>
-// alert($("form").serialize());
-
 $( "button" ).on( "click", function(event) {
 	var token = $("#csrfToken").attr("value");
 	var header = $("#csrfHeader").attr("value");
+	var spinner = $('.displayNone')
 	event.preventDefault();
 	$.ajax({
 		type: "POST",
 	    url : "addSubmit",
-	    //contentType: 'application/json',
-        //dataType: 'text',
-        	beforeSend: function (xhr) {
+        beforeSend: function (xhr) {
 		xhr.setRequestHeader(header, token);
-	},
+		spinner.css('display','block');
+		},
 	    data:$('form').serialize() ,
-	    
-	    success : function(data) {
-	        
-	        alert(data);
+	   	success : function(data){   
+	   		$.each( data, function( key, value ) {
+	   		  alert( key + ": " + value );
+	   		  $('.'+value+'Error').css( "display", "block" )
+	   		  $('.'+value+'ErrorInput').css({
+	   			border: "1px solid #DA1D1D",
+     			 fontWeight: "700"
+    			});	
+	   		});
+	    },
+	    complete: function(){
+	    	spinner.css('display','none');	
 	    }
 		
 	});
 	});
-	
-$.fn.serializeObject = function()
-{
-    var o = {};
-    var a = this.serializeArray();
-    $.each(a, function() {
-        if (o[this.name] !== undefined) {
-            if (!o[this.name].push) {
-                o[this.name] = [o[this.name]];
-            }
-            o[this.name].push(this.value || '');
-        } else {
-            o[this.name] = this.value || '';
-        }
-    });
-    return o;
-};
+		
 </script>
 </body>
 </html>
