--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -112,7 +112,13 @@ body {
       <img th:src="..." alt="..."/>
     </a>
   </div>
+
 </div>
+  <div class="footerInfo">
+  <ul>
+  	<li><a href="/dzejk/PresidentCandidateAPI">API for Developers</a></li>
+  </ul>
+  </div>
 </div>
     <script th:fragment="script" th:src="@{/resources/jquery/jquery-1.11.3.min.js}"></script>
 	<script th:fragment="script" th:src="@{/resources/bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js}"></script>
