--- a/src/main/webapp/WEB-INF/views/listCandidatePresident.html
+++ b/src/main/webapp/WEB-INF/views/listCandidatePresident.html
@@ -1,42 +1,111 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Home</title>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 <link th:replace="templates/templates::link"></link>
 <style>
- body {
-    font-family: 'PlayfairDisplayRegular', "Georgia", serif !important ;
+body {
+	font-family: 'PlayfairDisplayRegular', "Georgia", serif !important;
+}
 
+.red-button, red-button:hover {
+	background-color: #DC143C !important;
+	border-color: #DC143C !important;
 }
 </style>
 </head>
 <body>
 	<div class="container">
 		<div th:replace="templates/templates::menu"></div>
-	
-	
-	<table class="table table-hover">
-	<thead><tr>
-  <th>Imie</th>
-  <th>Nazwisko</th>
-  <th>Wykształcenie</th>
-  <th>Wiek</th>
-  <th>Partia</th>
-  <th>Szczegóły</th>
-  </tr>
-  </thead>
-  <tbody>
-  <td>Dawid</td>
-  <td>Zak</td>
-  <td>Zak</td>
-  </tbody>
-</table>
-	
-	
-	
-	<div th:replace="templates/templates::footer"></div>
+
+		<button th:if="${#authorization.expression('hasRole(''Admin'')')}"
+			type="button" class="btn btn-primary pull-right red-button"
+			data-toggle="modal" data-target="#myModal">Dodaj Kandydata</button>
+		<table class="table table-hover table-striped table-bordered">
+			<thead>
+				<tr>
+					<th>Imie</th>
+					<th>Nazwisko</th>
+					<th>Wykształcenie</th>
+					<th>Wiek</th>
+					<th>Partia</th>
+					<th>Szczegóły</th>
+				</tr>
+			</thead>
+			<tbody th:each="candidate : ${candidates}">
+				<td th:text="${candidate.firstName}">Dawid</td>
+				<td th:text="${candidate.lastName}">Zak</td>
+				<td th:text="${candidate.degree}">Zak</td>
+				<td th:text="${candidate.age}">Zak</td>
+				<td th:text="${candidate.partyMember}">Zak</td>
+			</tbody>
+		</table>
+
+
+		<div th:if="${#authorization.expression('hasRole(''Admin'')')}"
+			class="modal fade" id="myModal" tabindex="-1" role="dialog"
+			aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Dodaj Kandydata Na
+							Prezydenta</h4>
+					</div>
+					<div class="modal-body">
+						<form method="post" role="form" th:object="${registerCandidate}"
+							th:action="sendCandidateData">
+							<div class="form-group">
+								<label for="firstName">Imie</label> <input
+									th:field="${registerCandidate.firstName}" type="text"
+									class="form-control" name="firstName"
+									placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+								<label for="lastName">Nazwisko</label> <input
+									th:field="${registerCandidate.lastName}" type="text"
+									class="form-control" name="firstName"
+									placeholder="Podaj nazwisko kandydata" />
+								<div class="form-group">
+									<label for="degree">Wykształcenie</label> <input
+										th:field="${registerCandidate.degree}" type="text"
+										class="form-control" name="degree"
+										placeholder="Podaj wykształcenie kandydata" />
+								</div>
+								<div class="form-group">
+									<label for="age">Podaj Wiek Kandydata</label> <input
+										th:field="${registerCandidate.age}" type="text"
+										class="form-control" name="age"
+										placeholder="Podaj wiek kandydata" />
+								</div>
+										<div class="form-group">
+									<label for="partyMember">Podaj przynależność do partii</label> <input
+										th:field="${registerCandidate.partyMember}" type="text"
+										class="form-control" name="partyMember"
+										placeholder="Partia?" />
+								</div>
+							</div>
+							<div class="form-group">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Zamknij</button>
+								<button type="submit" class="btn btn-primary red-button">Zapisz</button>
+
+							</div>
+
+
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div th:replace="templates/templates::footer"></div>
 	</div>
 	<div th:replace="templates/templates::script"></div>
 </body>
