--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -8,6 +8,10 @@
     font-family: 'PlayfairDisplayRegular', "Georgia", serif !important ;
 
 }
+
+.warning {
+border: 1px solid #DA1D1D;
+}
 </style>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 <link th:replace="templates/templates::link"></link>
@@ -30,23 +34,23 @@
   </div>
     <div class="form-group">
     <label for="lastName">Nazwisko</label>
-    <input type="text" class="form-control" th:field="${registerUser.lastName}" id="lastName" placeholder="Podaj swoje nazwisko"/>
+    <input type="text" class="form-control lastNameErrorInput" th:field="${registerUser.lastName}" id="lastName" placeholder="Podaj swoje nazwisko"/>
   	<p class="lastNameError" style="display:none;">Podaj swoje nazwisko</p>  
   </div>
     <div class="form-group">
     <label for="PESEL">PESEL</label>
-    <input type="text" class="form-control"  th:field="${registerUser.PESEL}" id="PESEL" placeholder="Podaj swój PESEL"/>
+    <input type="text" class="form-control PESELErrorInput"  th:field="${registerUser.PESEL}" id="PESEL" placeholder="Podaj swój PESEL"/>
 	<p class="PESELError" style="display:none;">Podaj swoj PESEL</p>    
   </div> 			
   <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" class="form-control" th:field="${registerUser.email}" id="email" placeholder="Podaj swój email"/>
+    <input type="email" class="form-control emailErrorInput" th:field="${registerUser.email}" id="email" placeholder="Podaj swój email"/>
   	<td th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Name Error</td>
   	<p class="emailError" style="display:none;">Podaj swoj email</p>  
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control" th:field="${registerUser.password}" id="password1" placeholder="Podaj swoje hasło"/>
+    <input type="password" class="form-control passwordErrorInput" th:field="${registerUser.password}" id="password1" placeholder="Podaj swoje hasło"/>
   	<p class="passwordError" style="display:none;">Podaj swoje hasło</p>  
   </div>
     <!-- <div class="form-group">
@@ -55,14 +59,15 @@
   	</div>  -->
     <div class="form-group">
     <label for="region">Województwo</label>
-    <select class="form-control" th:field="${registerUser.IdD}">
+    <select class="form-control regionErrorInput" th:field="${registerUser.IdD}">
   <option   th:each="region : ${regions}"  th:text="${region.regionName}" th:field="${registerUser.IdD}" th:value="${region.id}"></option>
 </select>
- 	<p class="firstNameError" style="display:none;">Wybierz wojewodztwo</p>  
+ 	<p class="regionError" style="display:none;">Wybierz wojewodztwo</p>  
   </div>
     <div class="form-group">
     <label for="exampleInputPassword1">Miasto</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
+    <input type="text" class="form-control cityErrorInput" id="exampleInputPassword1" th:field="${registerUser.city}" placeholder="Password"/>
+  	<p class="cityError" style="display:none;">Podaj miasto</p>  
   	
   </div>
   <input type="hidden" th:name="${_csrf.parameterName}" id="csrfHeader" th:value="${_csrf.headerName}"/>
