--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -46,12 +46,12 @@ body {
             <ul  class="nav navbar-nav">
               <!-- Doczytac co oznacza # -->	
               <li class="active"><a href="/dzejk"><i class="fa fa-home fa-lg"></i> Strona główna</a></li>
-              <li><a href="list">Lista partii politycznych</a></li>
+              <li><a href="/dzejk/politicalParty">Lista partii politycznych</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lista kandydatów na...<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="/dzejk/listCandidatePresident">Prezydenta</a></li>
-                  <li><a href="#">Przewodniczącego Partii</a></li>
+                  <li><a href="/dzejk/politicalPartyCandidatesPresident">Przewodniczącego Partii</a></li>
                   <li><a href="#">Głosującego</a></li>
                 </ul>
               </li>
@@ -59,7 +59,7 @@ body {
                 <a  href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dodaj kandydatów...<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="/dzejk/listCandidatePresident">Prezydenta</a></li>
-                  <li><a href="#">Przewodniczącego Partii</a></li>
+                  <li><a href="/dzejk/politicalPartyCandidatesPresident">Przewodniczącego Partii</a></li>
                   <li><a href="#">Głosującego</a></li>
                 </ul>
               </li>
