--- a/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
+++ b/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
@@ -53,7 +53,39 @@ body {
 						<h4 class="modal-title" id="myModalLabel">Dodaj Kandydata Na Przewodniczacego Partii</h4>
 					</div>
 					<div class="modal-body">
-			
+							<form method="post" role="form" 
+							th:action="politicalPartyCandidatesPresidentSend" th:object="${politicalPartyCandidateParty}">
+							
+							<div class="form-group">
+								<label for="firstName">Imie</label> <input
+									th:field="${politicalPartyCandidateParty.firstName}" type="text"
+									class="form-control" name="firstName"
+									placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+								<label for="lastName">Nazwisko</label> <input
+									th:field="${politicalPartyCandidateParty.lastName}" type="text"
+									class="form-control" name="firstName"
+									placeholder="Podaj nazwisko kandydata" />
+										<div class="form-group">
+									<label for="partyMember">Podaj przynależność do partii</label> 
+									    <select class="form-control " th:field="${politicalPartyCandidateParty.partyMember}">
+  										<option th:each="party : ${politicalPartys}"  th:text="${party.partyName}" th:field="${politicalPartyCandidateParty.partyMember}" th:value="${party.partyName}"></option>
+										</select>	
+										
+										
+									
+								</div>
+							</div>
+							<div class="form-group">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Zamknij</button>
+								<button type="submit" class="btn btn-primary red-button">Zapisz</button>
+
+							</div>
+
+
+						</form>
 					</div>
 
 				</div>
