--- a/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
+++ b/src/main/webapp/WEB-INF/views/politicalPartyCandidatesPresidents.html
@@ -15,6 +15,14 @@ body {
 	background-color: #DC143C !important;
 	border-color: #DC143C !important;
 }
+
+.pointer{
+cursor: pointer;
+}
+.size-margin {
+margin-right: 33%;
+font-size: 20px;
+}
 </style>
 </head>
 <body>
@@ -30,12 +38,20 @@ body {
 					<th>Imie</th>
 					<th>Nazwisko</th>
 					<th>Partia</th>
+					<th>Akcja</th>
 				</tr>
 			</thead>
 			<tbody th:each="candidate: ${candidatePartyPresident}">
+			<tr  >
 				<td th:text="${candidate.firstName}">Dawid</td>
 				<td th:text="${candidate.lastName}">Zak</td>
 				<td th:text="${candidate.partyMember}">Zak</td>
+				<td><span th:value="${candidate.ID}" th:attr="data-id=${candidate.ID}, data-firstName=${candidate.firstName}, data-lastName=${candidate.firstName}, data-partyMember=${candidate.partyMember}" class="glyphicon glyphicon-remove pointer size-margin open-AddBookDialog" data-toggle="modal" data-target="#myModal1" aria-hidden="true"></span><span th:value="${candidate.ID}" class="glyphicon glyphicon-pencil size-margin pointer" aria-hidden="true"></span> </td>
+			</tr>	
+				
+				
+				
+
 			</tbody>
 		</table>
 <!-- th:class="${#fields.hasErrors('degree')}? fieldError"  -->
@@ -91,8 +107,64 @@ body {
 				</div>
 			</div>
 		</div>
+		<div th:if="${#authorization.expression('hasRole(''Admin'')')}"
+			class="modal fade" id="myModal1" tabindex="-1" role="dialog"
+			aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Usun kandydata na prezydenta partii</h4>
+					</div>
+					<div class="modal-body">
+							<form method="post" role="form" 
+							th:action="politicalPartyCandidatePresidentDelete" th:object="${politicalPartyCandidatePartyDelete}">
+							<div class="form-group">
+							<label for="ID">ID</label>
+							<input id="ID" type="text" class="form-control" value="" readonly="readonly" name="ID" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+							<label for="firstName">Imie</label>
+							<input id="firstName" type="text" class="form-control"  th:field="${politicalPartyCandidatePartyDelete.firstName}" readonly="readonly" name="firstName" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+							<label for="lastName">Nazwisko</label>
+							<input id="lastName" type="text" class="form-control" value="" readonly="readonly"  name="lastName" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+							<label for="party">Partia</label>
+							<input id="party" type="text" class="form-control" value="" readonly="readonly"  name="party" placeholder="Podaj imie kandydata" />
+							</div>
+							<div class="form-group">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Zamknij</button>
+								<button type="submit" class="btn btn-primary red-button">Usuń</button>
+
+							</div>
+
+
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		
 		<div th:replace="templates/templates::footer"></div>
 	</div>
 	<div th:replace="templates/templates::script"></div>
+	<script>
+
+	$(document).on("click", ".open-AddBookDialog", function () {
+	    $('input#ID.form-control').val($(this).data('id'))
+	    $('input#firstName.form-control').val($(this).data('firstname'));
+	    $('input#lastName.form-control').val($(this).data('lastname'));
+	    $('input#party.form-control').val($(this).data('partymember'));
+});
+
+	</script>
 </body>
 </html>
