--- a/src/main/webapp/WEB-INF/views/templates/templates.html
+++ b/src/main/webapp/WEB-INF/views/templates/templates.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
 <meta charset="UTF-8"/>
@@ -69,8 +69,8 @@ body {
             <ul class="nav navbar-nav navbar-right">
               <li  th:switch="${#authorization.expression('isAuthenticated()')}" class="active">
               	<a th:case="false" href="/dzejk/login"><i class="fa fa-sign-in fa-lg"></i> Zaloguj <span class="sr-only">(current)</span></a>
-              	<form th:case="true" method="post">
-              	<a  th:href="j_spring_security_logout"><i class="fa fa-sign-in fa-lg fa-rotate-180"></i> Wyloguj <span class="sr-only">(current)</span></a></form>
+              	<form th:case="true" method="post" th:action="@{/logout}">
+              	<button type="submit"  ><i class="fa fa-sign-in fa-lg fa-rotate-180"></i> Wyloguj <span class="sr-only">(current)</span></button></form>
               	</li>
               <li><a href="/dzejk/register"><i class="fa fa-user-plus fa-lg"></i> Zarejestruj</a></li>
               <li><a href="../navbar-fixed-top/"><i class="fa fa-info fa-lg"></i> O stronie</a></li>
@@ -86,7 +86,7 @@ body {
     The value of the "name" property of the authentication object should appear here.
 </div>
 
- <div th:if="${#authorization.expression('hasRole(''Admin'')')}">
+ <div th:if="${#authorization.expression('hasAuthority(''Admin'')')}">
         This will only be displayed if authenticated user has role ROLE_ADMIN.
     </div>
 </div>
